// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APISectionUtils.CommentTextBlock component basic comment 1`] = `
<div>
  <p
    class="css-1oym3r-TextComponent"
    data-text="true"
  >
    This is the basic comment.
  </p>
</div>
`;

exports[`APISectionUtils.CommentTextBlock component comment with example 1`] = `
<div>
  <strong
    class="css-bvflvn-TextComponent"
  >
    Only for:
     
  </strong>
  <div
    class="css-1r58h1i-PlatformTag"
  >
    <svg
      color="var(--green12)"
      fill="none"
      height="12"
      role="img"
      size="12"
      viewBox="0 0 20 20"
      width="12"
    >
      <title>
        Android-icon
      </title>
      <path
        d="M14.219 12.325a.766.766 0 010-1.532.765.765 0 010 1.532zm-8.438 0a.766.766 0 010-1.532.765.765 0 010 1.532zm8.712-4.613l1.525-2.651a.317.317 0 10-.55-.318l-1.544 2.684A9.393 9.393 0 0010 6.585a9.393 9.393 0 00-3.924.842L4.531 4.742a.317.317 0 10-.55.319l1.526 2.65c-2.62 1.43-4.412 4.091-4.674 7.235h18.334c-.263-3.144-2.055-5.805-4.674-7.234z"
        fill="var(--green12)"
      />
    </svg>
    <span
      class="css-6g4m4t-PlatformTag"
    >
      Android
    </span>
  </div>
  <br />
  <p
    class="css-1oym3r-TextComponent"
    data-text="true"
  >
    Gets the referrer URL of the installed app with the 
    <a
      class="css-1na8e0o-A"
      href="https://developer.android.com/google/play/installreferrer"
      rel="noopener noreferrer"
      target="_blank"
    >
      <code
        class="css-zmv3vl-TextComponent"
        data-text="true"
      >
        Install Referrer API
      </code>
    </a>
    
from the Google Play Store. In practice, the referrer URL may not be a complete, absolute URL.
  </p>
  <div
    class="css-10kkd4f"
  >
    <h4
      class="css-1gu5rqd-TextComponent"
      data-heading="true"
    >
      Example
    </h4>
  </div>
  <pre>
    <pre
      class="css-1tmj8fm"
      data-text="true"
    >
      <code
        class="css-1r5zesl"
      >
        <span
          class="token keyword"
        >
          await
        </span>
         
        <span
          class="token maybe-class-name"
        >
          Application
        </span>
        <span
          class="token punctuation"
        >
          .
        </span>
        <span
          class="token method function property-access"
        >
          getInstallReferrerAsync
        </span>
        <span
          class="token punctuation"
        >
          (
        </span>
        <span
          class="token punctuation"
        >
          )
        </span>
        <span
          class="token punctuation"
        >
          ;
        </span>
        

        <span
          class="token comment"
        >
          // "utm_source=google-play&utm_medium=organic"
        </span>
        

      </code>
    </pre>
  </pre>
</div>
`;

exports[`APISectionUtils.CommentTextBlock component no comment 1`] = `<div />`;

exports[`APISectionUtils.resolveTypeName Promise 1`] = `
<div>
  <a
    class="css-1na8e0o-A"
    href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise"
    rel="noopener noreferrer"
    target="_blank"
  >
    Promise
  </a>
  &lt;
  <span>
    void
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName Promise with custom type 1`] = `
<div>
  <a
    class="css-1na8e0o-A"
    href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise"
    rel="noopener noreferrer"
    target="_blank"
  >
    Promise
  </a>
  &lt;
  <span>
    <a
      class="css-1na8e0o-A"
      href="#appleauthenticationcredential"
    >
      AppleAuthenticationCredential
    </a>
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName Record 1`] = `
<div>
  Record
  &lt;
  <span>
    string
    , 
  </span>
  <span>
    any
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName Record with union 1`] = `
<div>
  Record
  &lt;
  <span>
    string
    , 
  </span>
  <span>
    <span>
      number
       | 
    </span>
    <span>
      boolean
       | 
    </span>
    <span>
      string
    </span>
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName alternative generic object notation 1`] = `
<div>
  { [column]: any }
</div>
`;

exports[`APISectionUtils.resolveTypeName custom type 1`] = `
<div>
  <a
    class="css-1na8e0o-A"
    href="#speechsynthesisevent"
  >
    SpeechSynthesisEvent
  </a>
</div>
`;

exports[`APISectionUtils.resolveTypeName custom type array 1`] = `
<div>
  <a
    class="css-1na8e0o-A"
    href="#appleauthenticationscope"
  >
    AppleAuthenticationScope
    []
  </a>
</div>
`;

exports[`APISectionUtils.resolveTypeName custom type non-linkable array 1`] = `
<div>
  T[]
</div>
`;

exports[`APISectionUtils.resolveTypeName custom type with single pick 1`] = `
<div>
  <a
    class="css-1na8e0o-A"
    href="https://www.typescriptlang.org/docs/handbook/utility-types.html#picktype-keys"
    rel="noopener noreferrer"
    target="_blank"
  >
    Pick
  </a>
  &lt;
  <span>
    <a
      class="css-1na8e0o-A"
      href="#fontresource"
    >
      FontResource
    </a>
    , 
  </span>
  <span>
    'display'
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName function 1`] = `
<div>
  () =&gt;
   
  <span>
    void
     | 
  </span>
  <span>
    <a
      class="css-1na8e0o-A"
      href="#speecheventcallback"
    >
      SpeechEventCallback
    </a>
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName function with arguments 1`] = `
<div>
  (
  <span>
    error
    : 
    <a
      class="css-1na8e0o-A"
      href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error"
      rel="noopener noreferrer"
      target="_blank"
    >
      Error
    </a>
  </span>
  ) 
  =&gt;
   
  <span>
    void
     | 
  </span>
  <span>
    <a
      class="css-1na8e0o-A"
      href="#speecheventcallback"
    >
      SpeechEventCallback
    </a>
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName function with non-linkable custom type 1`] = `
<div>
  (
  <span>
    error
    : 
    <a
      class="css-1na8e0o-A"
      href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error"
      rel="noopener noreferrer"
      target="_blank"
    >
      Error
    </a>
  </span>
  ) 
  =&gt;
   
  void
</div>
`;

exports[`APISectionUtils.resolveTypeName generic type 1`] = `
<div>
  string
</div>
`;

exports[`APISectionUtils.resolveTypeName generic type 2`] = `
<div>
  <a
    class="css-1na8e0o-A"
    href="#pagedinfo"
  >
    PagedInfo
  </a>
  &lt;
  <span>
    <a
      class="css-1na8e0o-A"
      href="#asset"
    >
      Asset
    </a>
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName generic type in Promise 1`] = `
<div>
  <a
    class="css-1na8e0o-A"
    href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise"
    rel="noopener noreferrer"
    target="_blank"
  >
    Promise
  </a>
  &lt;
  <span>
    <a
      class="css-1na8e0o-A"
      href="#pagedinfo"
    >
      PagedInfo
    </a>
    &lt;
    <span>
      <a
        class="css-1na8e0o-A"
        href="#asset"
      >
        Asset
      </a>
    </span>
    &gt;
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName object reflection 1`] = `
<div>
  {

  <span>
      
    target: 
    number
    , 
    

  </span>
  <span>
      
    value: 
    boolean
    

  </span>
  }
</div>
`;

exports[`APISectionUtils.resolveTypeName props with multiple omits 1`] = `
<div>
  StyleProp
  &lt;
  <span>
    <a
      class="css-1na8e0o-A"
      href="https://www.typescriptlang.org/docs/handbook/utility-types.html#omittype-keys"
      rel="noopener noreferrer"
      target="_blank"
    >
      Omit
    </a>
    &lt;
    <span>
      <a
        class="css-1na8e0o-A"
        href="https://reactnative.dev/docs/view-style-props"
        rel="noopener noreferrer"
        target="_blank"
      >
        ViewStyle
      </a>
      , 
    </span>
    <span>
      <span>
        'backgroundColor'
         | 
      </span>
      <span>
        'borderRadius'
      </span>
    </span>
    &gt;
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName query type 1`] = `
<div>
  React.ComponentProps
  &lt;
  <span>
    View
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName tuple type 1`] = `
<div>
  [
  <span>
    <a
      class="css-1na8e0o-A"
      href="#sortbykey"
    >
      SortByKey
    </a>
    , 
  </span>
  <span>
    boolean
  </span>
  ]
</div>
`;

exports[`APISectionUtils.resolveTypeName union 1`] = `
<div>
  <span>
    <a
      class="css-1na8e0o-A"
      href="#speecheventcallback"
    >
      SpeechEventCallback
    </a>
     | 
  </span>
  <span>
    null
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName union of array values 1`] = `
<div>
  (
  <span>
    <a
      class="css-1na8e0o-A"
      href="#resultseterror"
    >
      ResultSetError
    </a>
     | 
  </span>
  <span>
    <a
      class="css-1na8e0o-A"
      href="#resultset"
    >
      ResultSet
    </a>
  </span>
  )
  []
</div>
`;

exports[`APISectionUtils.resolveTypeName union with array 1`] = `
<div>
  <span>
    number[]
     | 
  </span>
  <span>
    null
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName union with custom type and array 1`] = `
<div>
  <span>
    <a
      class="css-1na8e0o-A"
      href="#assetref"
    >
      AssetRef
      []
    </a>
     | 
  </span>
  <span>
    <a
      class="css-1na8e0o-A"
      href="#assetref"
    >
      AssetRef
    </a>
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName void 1`] = `
<div>
  void
</div>
`;
